
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

SET(PROJECT_NAME step10)

PROJECT(${PROJECT_NAME})

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../warning2error.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/source.cmake)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/network
    ${CMAKE_CURRENT_SOURCE_DIR}/struct
)

FIND_PACKAGE(ZLIB REQUIRED)
MESSAGE("zlib include dir: ${ZLIB_INCLUDE_DIR}")
MESSAGE("zlib libraries: ${ZLIB_LIBRARIES}")

FIND_PACKAGE(OpenSSL REQUIRED)
MESSAGE("OpenSSL include dir: ${OPENSSL_INCLUDE_DIR}")
MESSAGE("OpenSSL libraries: ${OPENSSL_LIBRARIES}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${ZLIB_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    "m"
)
