
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

SET(PROJECT_NAME step11)

PROJECT(${PROJECT_NAME})

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../warning2error.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/source.cmake)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/network
    ${CMAKE_CURRENT_SOURCE_DIR}/struct
)

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${ZLIB_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    ${LUA_LIBRARIES}
    "m"
)
