
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

SET(PROJECT_NAME step13)

PROJECT(${PROJECT_NAME})

IF (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../warning2error.cmake)
    INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../warning2error.cmake)
ELSE ()
    INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../../warning2error.cmake)
ENDIF ()
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/source.cmake)

INCLUDE_DIRECTORIES(
    ${OPENSSL_INCLUDE_DIR}
    ${ZLIB_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/network
    ${CMAKE_CURRENT_SOURCE_DIR}/struct
)

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE})

SET(LIBRARIES
    ${ZLIB_LIBRARIES}
    ${OPENSSL_LIBRARIES}
)

IF (WIN32)
    INCLUDE_DIRECTORIES(${QTUN_SOURCE_DIR}/3rdParty)
    LIST(APPEND LIBRARIES
        "WSock32"
    )
ELSE ()
    LIST(APPEND LIBRARIES
        "m"
    )
ENDIF ()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})
